# vjs-auth

./: .env.sample  .gitignore  Makefile  README.md  pyproject.toml
infra/: Makefile  README.md  app.py
infra/config/: app-config-main.json
infra/stacks/: storage_stack.py
scripts/: generate_config.py
sites/vjsauth/: Makefile  config.example.json  config.example.json.jinja2  handler.py  index.html  script.js  server.py
tests/vjsauth/: conftest.py  test_basic_load.py  test_locked_content.py  test_oauth_authenticated.py
